--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Buckshot_Roulette
 logging.level.org.example.buckshot_roulette=DEBUG
 spring.devtools.restart.enabled=false
+server.servlet.session.timeout=30m
