--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,89 @@
-name: Java CI with Maven & Docker Build
+name: Build & Push Backend + Frontend
 
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build-and-push-to-dockerhub:
+  # --- JOB 1: BACKEND---
+  build-backend:
+    name: Build Backend (Java)
     runs-on: ubuntu-latest
     environment: Docker hub
 
     steps:
-    # --- PHẦN 1: Dùng java để build và test ---
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-        
-    - name: Build & Test with Maven
-      run: mvn -B package --file pom.xml
-      # Lưu ý: Bước này chạy test. Nếu test fail, quy trình dừng ngay tại đây.
+      - uses: actions/checkout@v4
 
-    # --- PHẦN 2: THÊM VÀO (Để đóng gói Docker) ---
-    
-    # Đăng nhập vào Docker Hub
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }} 
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    # Build Docker Image và đẩy lên
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: wing2k4/buckshot_roulette_game:backend
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & Push Backend Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          #Tên image
+          tags: wing2k4/buckshot-backend:latest
+
+  # --- JOB 2: FRONTEND ---
+  build-frontend:
+    name: Build & Test Frontend
+    runs-on: ubuntu-latest
+    environment: Docker hub
+    defaults:
+      run:
+        working-directory: ./frontend
+
+    steps:
+      - uses: actions/checkout@v4
+
+      #Chẩn bị testing environment
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
+
+      - name: Install Dependencies
+        run: npm ci --legacy-peer-deps
+
+      - name: Lint Check (Kiểm tra cú pháp code)
+        run: npm run lint
+
+
+      # Nếu có test unit
+      # - name: Run Unit Tests
+      #   run: npm test
+
+      - name: Try Build (Build thử xem có lỗi TypeScript không)
+        run: npm run build
+
+      # ---ĐÓNG GÓI DOCKER ---
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & Push Frontend Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: wing2k4/buckshot-frontend:latest
