--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,4 +1,56 @@
-name: frontend.yml
+name: Build & Push Frontend
+
 on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
+  build-frontend:
+    name: Build & Test Frontend
+    runs-on: ubuntu-latest
+    environment: Docker hub
+    defaults:
+      run:
+        working-directory: ./frontend
+
+    steps:
+      - uses: actions/checkout@v4
+
+      #Chẩn bị testing environment
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
+
+      - name: Install Dependencies
+        run: npm ci --legacy-peer-deps
+
+      - name: Lint Check (Kiểm tra cú pháp code)
+        run: npm run lint
+
+
+      # Nếu có test unit
+      # - name: Run Unit Tests
+      #   run: npm test
+
+      - name: Try Build (Build thử xem có lỗi TypeScript không)
+        run: npm run build
+
+      # ---ĐÓNG GÓI DOCKER ---
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & Push Frontend Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: wing2k4/buckshot-frontend:v1.0.0,
+            wing2k4/buckshot-frontend:latest
