--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   buckshot-app:
     image: wing2k4/buckshot-backend:v1.0.0
-    build: . 
+#    build: .
     container_name: buckshot_server
     restart: on-failure
     ports:
@@ -14,8 +14,8 @@ services:
       - SERVER_SERVLET_SESSION_TIMEOUT=30m
       
   frontend:
-    build: ./frontend
     image: wing2k4/buckshot-frontend:v1.0.0
+#    build: ./frontend
     container_name: buckshot_frontend
     restart: on-failure
     ports:
