--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,8 +3,14 @@ name: Build & Push Frontend
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontend.yml'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontend.yml'
 
 jobs:
   build-frontend:
