--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -49,3 +49,33 @@ jobs:
           #Tên image
           tags: wing2k4/buckshot-backend:v1.0.0,
             wing2k4/buckshot-backend:latest
+
+  deploy-azure:
+    needs: build-backend
+    runs-on: ubuntu-latest
+    environment: Docker hub
+
+    steps:
+      - name: Deploy to Azure Server via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            # Dừng và xóa container cũ
+            docker stop game-container || true
+            docker rm game-container || true
+
+            # Xóa images cũ
+            docker rmi ${{ secrets.DOCKER_USERNAME }}/buckshot-backend:latest || true
+            
+            # Tải images mới
+            docker pull ${{ secrets.DOCKER_USERNAME }}/buckshot-backend:v1.0.0
+            # Chạy game
+            docker run -d \
+              --name gameserver-container \
+              --restart always \
+              -p 8080:8080 \
+              ${{ secrets.DOCKER_USERNAME }}/buckshot-frontend:v1.0.0
