--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=Buckshot_Roulette
 logging.level.org.example.buckshot_roulette=DEBUG
 spring.devtools.restart.enabled=false
 server.servlet.session.timeout=30m
+
+# Global API Prefix
+spring.webmvc.servlet.path=/api
