--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -47,8 +47,9 @@ jobs:
           context: .
           push: true
           #Tên image
-          tags: wing2k4/buckshot-backend:v1.0.0,
-            wing2k4/buckshot-backend:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/buckshot-backend:v1.0.0
+            ${{ secrets.DOCKERHUB_USERNAME }}/buckshot-backend:latest
 
   deploy-azure:
     needs: build-backend
@@ -58,15 +59,19 @@ jobs:
     steps:
       - name: Deploy to Azure Server via SSH
         uses: appleboy/ssh-action@v1.0.3
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          envs: DOCKER_USERNAME
           port: 22
+          envs: DOCKER_USERNAME,DOCKERHUB_TOKEN
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
           script: |
+            # Đăng nhập Docker Hub
+            echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKER_USERNAME" --password-stdin
+            
             # Dừng và xóa container cũ
             docker stop gameserver-container || true
             docker rm gameserver-container || true
@@ -76,9 +81,13 @@ jobs:
             
             # Tải images mới
             docker pull $DOCKER_USERNAME/buckshot-backend:v1.0.0
+            
             # Chạy game
             docker run -d \
               --name gameserver-container \
               --restart always \
               -p 8080:8080 \
-              $DOCKER_USERNAME/buckshot-frontend:v1.0.0
+              $DOCKER_USERNAME/buckshot-backend:v1.0.0
+            
+            # Đăng xuất Docker Hub (tùy chọn, để an toàn)
+            docker logout
