Test: tag has double parse

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -41,15 +41,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set image name
+        run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/buckshot-backend" >> $GITHUB_ENV
+
       - name: Build & Push Backend Image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          #Tên image
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/buckshot-backend:v1.0.0
-            ${{ secrets.DOCKERHUB_USERNAME }}/buckshot-backend:latest
+            ${{ env.IMAGE_NAME }}:v1.0.0
+            ${{ env.IMAGE_NAME }}:latest
+  
 
   deploy-azure:
     needs: build-backend
