Update: sync api with nginx

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.devtools.restart.enabled=false
 server.servlet.session.timeout=30m
 
 # Global API Prefix
-spring.webmvc.servlet.path=/api
+#spring.webmvc.servlet.path=/api
