--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       - LOGGING_LEVEL_ORG_EXAMPLE_BUCKSHOT_ROULETTE=DEBUG
       - SPRING_DEVTOOLS_RESTART_ENABLED=false
       - SERVER_SERVLET_SESSION_TIMEOUT=30m
-      - SPRING_WEBMVC_SERVLET_PATH=/api
 
   frontend:
     image: wing2k4/buckshot-frontend:v1.0.0
@@ -22,6 +21,6 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - VITE_BACKEND_URL=http://buckshot-app:8080
+      - VITE_BACKEND_URL=http://buckshot-app:8080/api
     depends_on:
       - buckshot-app
